--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -9,15 +9,18 @@ body {
     text-transform: uppercase;
 
     background-color: #f2f2f2f2;
-    background-image: url("../../img/background-photo.png"), url("../../img/welcome.svg"), url("../../img/polygon.svg");
-    background-position: top center;
-    background-repeat: no-repeat;
+}
+.main-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0);
+    position: relative;
+    width: 1200px;
+    box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 a {
     text-decoration: none;
-}
-.main-header {
-    margin-bottom: 552px;
 }
 .main-navigation {
     font-weight: 700;
@@ -40,6 +43,8 @@ a {
     width: 100%;
     margin: 0;
     padding: 0;
+    padding-top: 14px;
+    padding-bottom: 16px;
 }
 .site-navigation a {
     color: #000000;
@@ -52,12 +57,32 @@ a {
     color: #000000;
     opacity: .3;
 }
+.site-navigation li {
+    display: inline-block;
+    width: 239px;
+    vertical-align: middle;
+    text-align: center;
+}
+.site-navigation li:nth-child(2) {
+    margin-right: 244px;
+}
 .main-header-logo {
   position: absolute;
   order: 2;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+.container {
+    display: flex;
+    flex-direction: column;
+}
+.welcome-screen {
+    width: 100%;
+    min-height: 501px;
+    background-image: url("../../img/polygon.svg"), url("../../img/background-photo.png");
+    background-repeat: no-repeat;
+    position: relative;
 }
 .intro b {
     font-size: 21px;
